frontend/mobile.css
body {
  background-color: #2C3E50;
  font-family: courier;
  color: #FDFEFE;
}
 
div.content {
  margin-left: 3%;
  margin-top: 10%;
  width: 90%
}
 
div h2 {
  margin-left: 12%;
  font-size: 80px;
  white-space:nowrap;
}
 
div.slidecontainer {
  margin-top: 2%;
  margin-left: 7%;
  margin-right: 8%;
  font-size: 30px
}
 
div.controlbar {
  margin-top: 2%;
  margin-left: 15%;
  white-space:nowrap;
  font-size: 30px
}

input[type="number"] {
  font-size:30px;
  width: 45%
}

input.frequencytext[type="number"] {
  font-size:30px;
  width: 60px
}
 
div.stopbar {
  margin-top: 2%;
  margin-left: 80%;
  display: none;
}

div.frequencytext {
  white-space: nowrap;
}
 
div.timer {
  margin-top: 5%;
  margin-left: 55%;
  font-size: 80px;
  white-space: nowrap;
}
 
tr.spaceUnder>td {
  padding-bottom: 75px;
}

button {
  text-align: center;
  font-size: 30px;
  font-family: courier;
}

/* experimental below from webpage */

input[type="range"] {
  background: transparent;
}
/*###################################*/
/*###########Responsive Range########*/
/*###################################*/
/*##############Core Style###########*/

input[type="range"] {
  -webkit-appearance: none;
  width: 550px;
}

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
}

input[type="range"]:focus {
  outline: none;
}

input[type="range"]::-ms-track {
  width: 100%;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  color: transparent;
}
/*#############Thumb##############*/

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  height: 48px;
  width: 48px;
  background: #555;
  cursor: pointer;
  margin-top: -12px;
}

input[type="range"]::-moz-range-thumb {
  height: 48px;
  width: 48px;
  background: #555;
  cursor: pointer;
}

input[type="range"]::-ms-thumb {
  height: 48px;
  width: 48px;
  background: #555;
  cursor: pointer;
}
/*#############Track##############*/

input[type="range"]::-webkit-slider-runnable-track {
  width: 100%;
  height: 16px;
  cursor: pointer;
  background: #ccc;
}

input[type="range"]:active::-webkit-slider-runnable-track {
  background: #d6d6d6;
}

input[type="range"]::-moz-range-track {
  width: 100%;
  height: 16px;
  cursor: pointer;
  background: #ccc;
}

input[type="range"]::-ms-track {
  width: 100%;
  height: 16px;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  color: transparent;
}

input[type="range"]::-ms-fill-lower {
  background: #ccc;
}

input[type="range"]:focus::-ms-fill-lower {
  background: #ddd;
}

input[type="range"]::-ms-fill-upper {
  background: #ccc;
}

input[type="range"]:focus::-ms-fill-upper {
  background: #ddd;
}

div.aboutDiv {
  width: auto;
  font-size: 11px
}

a:link {
  color: white
}

button.nonButton {
  background:none;
  border:none;
  color: white;
  text-decoration: underline
}

